Fixes a segfault in empathy-individual-store.c

When a contact cannot be obtained from an individual, icon_name and
contact will be NULL, leading to g_hash_table_lookup for a NULL-value,
segfaulting.

Although there's probably an underlying error somewhere, the NULL case
should be handled, being a valid return value for the method;

https://bugzilla.gnome.org/show_bug.cgi?id=657914